force-app/main/default/objects/Account/fields/Account_Customer_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Customer_Status__c</fullName>
    <description>Health signal used with Account Size Tier for Case priority.</description>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Healthy</fullName>
                <default>true</default>
                <label>Healthy</label>
            </value>
            <value>
                <fullName>At_Risk</fullName>
                <label>At Risk</label>
            </value>
            <value>
                <fullName>Churning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>