force-app/main/default/objects/Account/fields/Account_Size_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Size_Tier__c</fullName>
    <description>Used by Case priority Flow to triage incoming cases.</description>
    <label>Account Size Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMB</fullName>
                <default>true</default>
                <label>SMB</label>
            </value>
            <value>
                <fullName>Mid_Market</fullName>
                <label>Mid-Market</label>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>