force-app/main/default/objects/Account/fields/Closed_Support_Cases__c.field-meta.xml
<CustomField>
    <fullName>Closed_Support_Cases__c</fullName>
    <description>Count of closed support cases (maintained by automation).</description>
    <label>Closed Support Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>