force-app/main/default/objects/Account/fields/CSM__c.field-meta.xml
<CustomField>
    <fullName>CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer Success Manager for follow-up Tasks when Cases close.</description>
    <label>CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_As_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>