force-app/main/default/objects/Account/fields/Last_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Service_Date__c</fullName>
    <description>Last time a support Case was closed for this Account.</description>
    <label>Last Service Date</label>
    <type>Date</type>
</CustomField>